--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
 
     a {
       text-decoration: none;
+      background-color: blue;
+      width: 100px;
+      height: 40px;
+      border-radius: 10px;
+      color: white;
+      font-size: 16px;
     }
   </style>
 <body>
