--- a/index.html
+++ b/index.html
@@ -31,7 +31,18 @@
       font-size: 19px;
     }
 
-    
+      button {
+    width: 100px;
+    height: 40px;
+    border-radius: 10px;
+    margin: 5px;
+    background-color: blue;
+    color: white;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+  
 
     a {
       text-decoration: none;
@@ -56,18 +67,18 @@
             <button type="button" >Binance </button>
             <br />
                     <center>
-          <a href="https://onedailydealnow.com/M00yUjMwNUk3eDhrOXY="
+          <a href="https://onedailydealnow.com/M00yUjMwNUk3eDhrOXY=">
           <button type="button">PayPal </button>
                         <br />
         </center>
         
                           <center>
-          <a href="https://onedailydealnow.com/M1YyajNhNjI0QTBUNmU="
+          <a href="https://onedailydealnow.com/M1YyajNhNjI0QTBUNmU=">
           <button type="button">Skrill </button>
                         <br />
         </center>
                                   <center>
-          <a href="https://onedailydealnow.com/M0EyazNmNmE0SjFENEc="
+          <a href="https://onedailydealnow.com/M0EyazNmNmE0SjFENEc=">
           <button type="button"> FaucetPay محفظة</button>
                         <br />
         </center>
